syntax = "proto3";


import "products.proto";
import "google/protobuf/empty.proto";



package orders;

option go_package = "github.com/jassoec/grpc-microservices/protogen/golang/orders";

service OrdersService {
  rpc GetOrder (GetOrderRequest) returns (Order) {}
  rpc CreateOrder (CreateOrderRequest) returns (Order) {}
  rpc ListOrders (google.protobuf.Empty)  returns (ListOrdersResponse) {}
}

message GetOrderRequest {
  string order_id = 1;
}

message Order{
  string order_id = 1;
  string created_at = 2;
  repeated OrderItem items = 3;
}


message OrderItem {
  string product_id = 1;
  int32 quantity = 2;
  string order_id = 3;
  products.Product product = 4;
}

message CreateOrderRequest {
  repeated OrderItem items = 3;
}

message ListOrdersResponse {
  repeated Order orders = 1;
}